src/components/DocsLayout.module.css
/**
 * Document layout styles
*/

.layoutContainer {
  background-color: var(--theme-bg-white);
  width: 100%;
  max-height: calc(100% - var(--header-height-mobile));

  @media (width >= 1024px) {
    align-items: start;
    display: grid;
    grid-template-columns: auto 1fr;
    max-height: calc(100% - var(--header-height));
  }
}

.sidebarContainer {
  background-color: var(--theme-bg-white);
  border-right: 0.1rem solid var(--theme-border);
  display: none;
  left: 0;
  padding: 1.5rem;
  position: fixed;
  height: calc(100vh - var(--header-height-mobile));
  overflow-y: auto;
  width: 30rem;
  flex-shrink: 0;

  @media (width >= 1024px) {
    display: block;
    height: calc(100vh - var(--header-height));
    position: sticky;
    top: var(--header-height);
  }
}

/* Show sidebar when hamburger is open */
.sidebarOpen {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.mainContent {
  margin: 0 auto;
  max-width: 88rem;
  padding: 3.5rem 2rem;
  width: 100%;
}

.bannerRow {
  margin-bottom: 1rem;
}

